--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ PORT=3000
 URI_MONGO=mongodb://localhost:27017/FindYourrHotel
 
 SECRETORPRIVATEKEY=ug2li2ehiue2ids!@
+
+CLOUDINARY_CLOUD_NAME=dcczhqfbn
+
+CLOUDINARY_API_KEY=373621872176658
+
+CLOUDINARY_API_SECRET=CpVtdi_F2DmX8ZtzclVS8F9n7aA
