--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "adoptionsystem": "file:",
     "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
